2009-08-23  Sancho Lerena <slerena@artica.es>

	* util/tentacle_serverd: Using SU instead SUDO, idea from
	"paco", from our forums. This makes this script much more
	compatible with other systems, because sudo is not so common.

2009-08-22  Sancho Lerena <slerena@artica.es>

	* util/agent_names.txt, util/pandora_xml_stress.conf: delete this files
	because it's the local conf files generates for local configurations, and
	by mistake I upload.

2009-08-22  Sancho Lerena <slerena@artica.es>

	* pandora_server.spec: Update uninstall process.

2009-08-20  Sancho lerena <slerena@artica.es>

	* lib/PandoraFMS/Tools.pm: Undone commit of 19/8 to fix ugly mesg from
	enterprise load: was  breaking enterprise....

2009-08-19  Manuel Arostegui <manuel@todo-linux.com>

	* pandora_server.spec: Changed email.

2009-08-19  Sancho lerena <slerena@artica.es>

	* pandora_server.spec: Added nmap to required packages, removed xprobe2.
	
	* lib/PandoraFMS/Config.pm, conf/pandora_server.conf: New token for nmap.
	 
	* lib/PandoraFMS/ReconServer.pm: New parent detection, TCP scanning imple-
	mented using NMAP. Implemented TCP profile scanning.
	
	* lib/PandoraFMS/Tools.pm: Some reordering in pandora_get_os() gives
	more accurate OS guessing. enterprise_hook() now don't yell when enterprise
	is not found :-)

	* pandora_server.spec: Updated some dependencies. Also included the 
	install of pandora_db maintance script in cron.daily.
	
	* pandora_server, tentacle_serverd: Added short description to able
	yast visualizate correctly the description in software selection screen.
	
	* lib/PandoraFMS/Core.pm: Fixed problem with OS Detection at creation. Added
	support for AUTOTIME (time of data is given by the server instead by data
	coming from the agent) and autoimport of agent description. 

	* util/tentacle_serverd: Call to umask to let tentacle_server create
	files with mask 0007, because Enterprise version need to write files
	fetched with tentacle.
